修改启动方式（让jps支持显示类名） 增加了建议版的守护进程